--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,20 +1,9 @@
-spring.application.name=ServiAseo
-# Configuración de la base de datos PostgreSQL
 spring.jpa.database=POSTGRESQL
-spring.datasource.platform=postgresql
+spring.datasource.platform=postgres
 spring.datasource.url=jdbc:postgresql://localhost:5432/serviaseo_db
-spring.datasource.username=serviaseo_user
+spring.datasource.username=postgres
 spring.datasource.password=admin123
-spring.datasource.driver-class-name=org.postgresql.Driver
-
-# Configuración JPA/Hibernate
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=aseoprueba@gmail.com
-spring.mail.password=Admin@123
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
